--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="./favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 		
 		<link href="./_app/immutable/assets/fa-layers-text.CzRTupYY.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DRAM9Wz3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Do8eUYqv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.uvtXzqak.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B62mVbEH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.hBtIYSGN.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DmfBoD5E.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C_emw5Wg.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.lNqW0e1M.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.01FlZilb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/fa-layers-text.svelte_svelte_type_style_lang.Zf94xhv3.js">
@@ -27,7 +27,7 @@ Not sure what it is? Complete the puzzle to reveal a beautiful image.</p> <a hre
 			
 			<script>
 				{
-					__sveltekit_1lc7pud = {
+					__sveltekit_1bu4yg = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -36,8 +36,8 @@ Not sure what it is? Complete the puzzle to reveal a beautiful image.</p> <a hre
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DRAM9Wz3.js"),
-						import("./_app/immutable/entry/app.DmfBoD5E.js")
+						import("./_app/immutable/entry/start.uvtXzqak.js"),
+						import("./_app/immutable/entry/app.C_emw5Wg.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
