--- a/privacy.html
+++ b/privacy.html
@@ -7,10 +7,10 @@
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 		
 		<link href="./_app/immutable/assets/fa-layers-text.CzRTupYY.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.uvtXzqak.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B62mVbEH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BXa5ddGa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CfcY0VoR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.hBtIYSGN.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C_emw5Wg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DNCsRG0n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.lNqW0e1M.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.01FlZilb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/fa-layers-text.svelte_svelte_type_style_lang.Zf94xhv3.js">
@@ -29,7 +29,7 @@ In addition, GeoSwapper uses Unity’s Analytics feature. This allows us to unde
 			
 			<script>
 				{
-					__sveltekit_1bu4yg = {
+					__sveltekit_sxk1gy = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -38,8 +38,8 @@ In addition, GeoSwapper uses Unity’s Analytics feature. This allows us to unde
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.uvtXzqak.js"),
-						import("./_app/immutable/entry/app.C_emw5Wg.js")
+						import("./_app/immutable/entry/start.BXa5ddGa.js"),
+						import("./_app/immutable/entry/app.DNCsRG0n.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
