--- a/help.html
+++ b/help.html
@@ -5,23 +5,24 @@
 		<link rel="icon" href="./favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" type="text/css" href="styles.css" />
+		<title>HDH Analytics</title>
 		
 		<link href="./_app/immutable/assets/fa-layers-text.CzRTupYY.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BXa5ddGa.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CfcY0VoR.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B8k78hM1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CIcKvbBo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.hBtIYSGN.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DNCsRG0n.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.lNqW0e1M.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.01FlZilb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/fa-layers-text.svelte_svelte_type_style_lang.Zf94xhv3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.BDPaCyU_.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.BA7y70fs.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/parallax.Ch6SEw6I.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Hxxl6i7T.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.LECUU4t7.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DO8Jm3jJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/fa-layers-text.svelte_svelte_type_style_lang.D-IHBJut.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CYYIPRMA.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.CHNsIumm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/parallax.CWeAN8b1.js"><!-- HEAD_svelte-gil8v_START --><meta name="description" content="Helpful instructions for apps written by HDH Analytics."><!-- HEAD_svelte-gil8v_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <nav><a href="/" data-svelte-h="svelte-34bi7d">HDH Analytics</a> <a href="/#apps" data-svelte-h="svelte-rin1hu">Products</a> <a href="https://apps.apple.com/us/developer/hdh-analytics-inc/id1523364815"> <svg class="svelte-fa svelte-fa-base undefined svelte-bvo74f" viewBox="0 0 640 512" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg"><g transform="translate(320 256)" transform-origin="160 0"><g transform="translate(0,0) scale(1,1)"><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128H144zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39V184c0-13.3-10.7-24-24-24s-24 10.7-24 24V318.1l-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z" fill="currentColor" transform="translate(-320 -256)"></path></g></g></svg>
 		Appstore</a> <a href="https://www.instagram.com/hdh_analytics/"> <svg class="svelte-fa svelte-fa-base undefined svelte-bvo74f" viewBox="0 0 448 512" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg"><g transform="translate(224 256)" transform-origin="112 0"><g transform="translate(0,0) scale(1,1)"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" fill="currentColor" transform="translate(-224 -256)"></path></g></g></svg>
-		Instagram</a></nav> <img class="page-bg-img" src="disk.jpg" alt="View of a starry night"> <div class="hero" data-svelte-h="svelte-vojnbj"><h1>Help</h1> <p>Help for all our apps.</p></div> <div class="parallax-content center-horizontal" style="transform: translate3D(0, -0px, 0)"><h1 id="apps" data-svelte-h="svelte-1nepfbj">Help</h1> <div class="product-vertical-list"><div class="product"><div><img src="icons/DisplayArrangerIcon.png" alt="Icon for Display Arranger" class="img-rounded"> <h2>Display Arranger</h2> <h3>Easily arrange your displays</h3></div> <div><!-- HTML_TAG_START -->
+		Instagram</a></nav>  <img class="page-bg-img" src="backgrounds/disk.webp" alt="A hard drive"> <div class="hero" data-svelte-h="svelte-vojnbj"><h1>Help</h1> <p>Help for all our apps.</p></div> <div class="parallax-content center-horizontal" style="transform: translate3D(0, -0px, 0)"><h1 id="apps" data-svelte-h="svelte-1nepfbj">Help</h1> <div class="product-vertical-list"><div class="product"><div><img src="icons/DisplayArrangerIcon.webp" alt="Icon for Display Arranger" class="img-rounded"> <h2>Display Arranger</h2> <h3>Easily arrange your displays</h3></div> <div><!-- HTML_TAG_START -->
 			<p class="alert">Please connect at least one external display to your device or else Display Arranger will not be of any use.</p>
 			<h4>Setting display positions</h4>
 			<ol>
@@ -39,7 +40,7 @@
 				<li>Click "Edit details"</li>
 				<li>Enter a new name</li>
 				<li>Click "Apply changes"</li>
-			</ol><!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/GrammyIcon.png" alt="Icon for Grammy for Youtube Music" class="img-rounded"> <h2>Grammy for Youtube Music</h2> <h3>The best way to listen on Vision Pro</h3></div> <div><!-- HTML_TAG_START -->Please see Youtube Music's help pages for instructions on how to use the app. This is a client to help you better access the app on Vision Pro. The functionnality remains the same.<!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/iFavsIcon.png" alt="Icon for iFavs" class="img-regular"> <h2>iFavs</h2> <h3>File &amp; Link Manager</h3></div> <div><!-- HTML_TAG_START --><h4>Adding a new favorite:</h4>
+			</ol><!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/GrammyIcon.webp" alt="Icon for Grammy for Youtube Music" class="img-rounded"> <h2>Grammy for Youtube Music</h2> <h3>The best way to listen on Vision Pro</h3></div> <div><!-- HTML_TAG_START -->Please see Youtube Music's help pages for instructions on how to use the app. This is a client to help you better access the app on Vision Pro. The functionnality remains the same.<!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/iFavsIcon.webp" alt="Icon for iFavs" class="img-regular"> <h2>iFavs</h2> <h3>File &amp; Link Manager</h3></div> <div><!-- HTML_TAG_START --><h4>Adding a new favorite:</h4>
 			<ol>
 				<li>Click on the star (Top right corner of your screen)</li>
 				<li>Click Add to Favorites…</li>
@@ -88,11 +89,11 @@
 				<li>Recommended Defaults: resets settings to recommended settings.</li>
 				<li>Sync group: Group where favorites are stored. These are: Favorites, Home, Work, and Other.</li>
 				<li>When changed, your favorites will automatically change to display those of the current group.</li>
-			</ul><!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/PedalboardIcon.png" alt="Icon for Pedalboard" class="img-rounded"> <h2>Pedalboard</h2> <h3>Portable Effects</h3></div> <div><!-- HTML_TAG_START -->
+			</ul><!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/PedalboardIcon.webp" alt="Icon for Pedalboard" class="img-rounded"> <h2>Pedalboard</h2> <h3>Portable Effects</h3></div> <div><!-- HTML_TAG_START -->
 			<h4>Turn effects on and off</h4>
 			<p>Toggle pedals by tapping on the grey stomp buttons.</p>
 			<h4>Customizing effects</h4>
-			<p>Edit pedal parameters by tapping and holding on the pedal's graphic. Changes are applied automatically.</p><!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/5x5Icon.png" alt="Icon for WorkIt - 5x5 Puzzles" class="img-rounded"> <h2>WorkIt - 5x5 Puzzles</h2> <h3>Math puzzles</h3></div> <div><!-- HTML_TAG_START --><h4>Replay tutorial</h4><p>Tap the tutorial button at the app's main menu.</p><!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/TTOLIcon.png" alt="Icon for Two Truths One Lie" class="img-rounded"> <h2>Two Truths One Lie</h2> <h3>iMessage game</h3></div> <div><!-- HTML_TAG_START --><h4>Starting a new game</h4>
+			<p>Edit pedal parameters by tapping and holding on the pedal's graphic. Changes are applied automatically.</p><!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/5x5Icon.webp" alt="Icon for WorkIt - 5x5 Puzzles" class="img-rounded"> <h2>WorkIt - 5x5 Puzzles</h2> <h3>Math puzzles</h3></div> <div><!-- HTML_TAG_START --><h4>Replay tutorial</h4><p>Tap the tutorial button at the app's main menu.</p><!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/TTOLIcon.webp" alt="Icon for Two Truths One Lie" class="img-rounded"> <h2>Two Truths One Lie</h2> <h3>iMessage game</h3></div> <div><!-- HTML_TAG_START --><h4>Starting a new game</h4>
 		<ol>
 			<li>Open the iMessage App.</li>
 			<li>Enter your three statements into the textfields.</li>
@@ -104,7 +105,7 @@
 			<li>Tap on the receive message.</li>
 			<li>Tap on the false statement.</li>
 			<li>Tap on the send button.</li>
-		</ol><!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/GeoSwapperIcon.png" alt="Icon for GeoSwapper" class="img-rounded"> <h2>GeoSwapper</h2> <h3>Tile puzzles</h3></div> <div><!-- HTML_TAG_START --><h4>The Goal</h4>
+		</ol><!-- HTML_TAG_END --></div> </div><div class="product"><div><img src="icons/GeoSwapperIcon.webp" alt="Icon for GeoSwapper" class="img-rounded"> <h2>GeoSwapper</h2> <h3>Tile puzzles</h3></div> <div><!-- HTML_TAG_START --><h4>The Goal</h4>
 		<p>Complete puzzles by either correctly placing the puzzle pieces to reconstruct the image or by spelling out the subject of the photo.</p>
 		<h4>Replay the Tutorial</h4>
 		<ol>
@@ -114,7 +115,7 @@
 			
 			<script>
 				{
-					__sveltekit_sxk1gy = {
+					__sveltekit_19bkjtr = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -123,8 +124,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BXa5ddGa.js"),
-						import("./_app/immutable/entry/app.DNCsRG0n.js")
+						import("./_app/immutable/entry/start.B8k78hM1.js"),
+						import("./_app/immutable/entry/app.Hxxl6i7T.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
