--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 		<title>HDH Analytics</title>
 		
 		<link href="./_app/immutable/assets/fa-layers-text.CzRTupYY.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.B8k78hM1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CIcKvbBo.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CZriDOpu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DVYckqo6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.hBtIYSGN.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Hxxl6i7T.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dgi3iCxV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.LECUU4t7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DO8Jm3jJ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/fa-layers-text.svelte_svelte_type_style_lang.D-IHBJut.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.CYYIPRMA.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.B4FmbS3a.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Be8xIGAm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/fa-layers-text.svelte_svelte_type_style_lang.CXkhc5V_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.zxSwkrBN.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.JCFgcHSe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/parallax.CWeAN8b1.js"><!-- HEAD_svelte-3w77a1_START --><meta name="description" content="iOS and MacOS apps written by HDH Analytics. Includes the popular Display Arranger and Grammy for Youtube Music."><!-- HEAD_svelte-3w77a1_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -28,7 +28,7 @@ Not sure what it is? Complete the puzzle to reveal a beautiful image.</p> <a hre
 			
 			<script>
 				{
-					__sveltekit_19bkjtr = {
+					__sveltekit_13xzxma = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -37,8 +37,8 @@ Not sure what it is? Complete the puzzle to reveal a beautiful image.</p> <a hre
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.B8k78hM1.js"),
-						import("./_app/immutable/entry/app.Hxxl6i7T.js")
+						import("./_app/immutable/entry/start.CZriDOpu.js"),
+						import("./_app/immutable/entry/app.Dgi3iCxV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
