--- a/help.html
+++ b/help.html
@@ -8,21 +8,21 @@
 		<title>HDH Analytics</title>
 		
 		<link href="./_app/immutable/assets/fa-layers-text.CzRTupYY.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CZriDOpu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DVYckqo6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.qG_pGnw0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.RrYJ2dIA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.hBtIYSGN.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Dgi3iCxV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BEwJzLhN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.LECUU4t7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Be8xIGAm.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Hm1opI9O.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/fa-layers-text.svelte_svelte_type_style_lang.CXkhc5V_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.zxSwkrBN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.BehIMEKd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/parallax.CWeAN8b1.js"><!-- HEAD_svelte-gil8v_START --><meta name="description" content="Helpful instructions for apps written by HDH Analytics."><!-- HEAD_svelte-gil8v_END -->
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.DrlGuDGA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/parallax.D7_3q73h.js"><!-- HEAD_svelte-gil8v_START --><meta name="description" content="Helpful instructions for apps written by HDH Analytics."><!-- HEAD_svelte-gil8v_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">  <nav><a href="/" data-svelte-h="svelte-34bi7d">HDH Analytics</a> <a href="/#apps" data-svelte-h="svelte-rin1hu">Products</a> <a href="https://apps.apple.com/us/developer/hdh-analytics-inc/id1523364815"> <svg class="svelte-fa svelte-fa-base undefined svelte-bvo74f" viewBox="0 0 640 512" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg"><g transform="translate(320 256)" transform-origin="160 0"><g transform="translate(0,0) scale(1,1)"><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128H144zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39V184c0-13.3-10.7-24-24-24s-24 10.7-24 24V318.1l-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z" fill="currentColor" transform="translate(-320 -256)"></path></g></g></svg>
 		Appstore</a> <a href="https://www.instagram.com/hdh_analytics/"> <svg class="svelte-fa svelte-fa-base undefined svelte-bvo74f" viewBox="0 0 448 512" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg"><g transform="translate(224 256)" transform-origin="112 0"><g transform="translate(0,0) scale(1,1)"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" fill="currentColor" transform="translate(-224 -256)"></path></g></g></svg>
-		Instagram</a></nav>  <img class="page-bg-img" src="backgrounds/disk.webp" alt="A hard drive"> <div class="hero" data-svelte-h="svelte-vojnbj"><h1>Help</h1> <p>Help for all our apps.</p></div> <div class="parallax-content center-horizontal" style="transform: translate3D(0, -0px, 0)"><h1 id="apps" data-svelte-h="svelte-1nepfbj">Help</h1> <div class="product-vertical-list"><div class="product"><div><img src="icons/DisplayArrangerIcon.webp" alt="Icon for Display Arranger" class="img-rounded"> <h2>Display Arranger</h2> <h3>Easily arrange your displays</h3></div> <div><!-- HTML_TAG_START -->
+		Instagram</a></nav>  <img class="page-bg-img" src="backgrounds/disk.webp" alt="A hard drive"> <div class="hero" data-svelte-h="svelte-vojnbj"><h1>Help</h1> <p>Help for all our apps.</p></div> <div class="parallax-content center-horizontal" style=""><h1 id="apps" data-svelte-h="svelte-1nepfbj">Help</h1> <div class="product-vertical-list"><div class="product"><div><img src="icons/DisplayArrangerIcon.webp" alt="Icon for Display Arranger" class="img-rounded"> <h2>Display Arranger</h2> <h3>Easily arrange your displays</h3></div> <div><!-- HTML_TAG_START -->
 			<p class="alert">Please connect at least one external display to your device or else Display Arranger will not be of any use.</p>
 			<h4>Setting display positions</h4>
 			<ol>
@@ -111,11 +111,11 @@
 		<ol>
 			<li>Inside the app, tap on the settings button in the top left corner of the home page.</li>
 			<li>Tap "Show Tutorial when I play", The tutorial will now play the next time you open a level.</li>
-		</ol><!-- HTML_TAG_END --></div> </div></div></div> <footer data-svelte-h="svelte-123r1ge"><a href="/">HDH Analytics Inc.</a> <a href="/help">Help</a> <a href="/privacy">Privacy Policies</a> <p>© 2024, HDH Analytics Inc.</p></footer> 
+		</ol><!-- HTML_TAG_END --></div> </div></div></div> <footer style="padding-top: 2rem;" data-svelte-h="svelte-1p1tv70"><a href="/">HDH Analytics Inc.</a> <a href="/help">Help</a> <a href="/privacy">Privacy Policies</a> <p>© 2024, HDH Analytics Inc.</p></footer> 
 			
 			<script>
 				{
-					__sveltekit_13xzxma = {
+					__sveltekit_1b0qhfd = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -124,8 +124,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CZriDOpu.js"),
-						import("./_app/immutable/entry/app.Dgi3iCxV.js")
+						import("./_app/immutable/entry/start.qG_pGnw0.js"),
+						import("./_app/immutable/entry/app.BEwJzLhN.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
